<resources>

    <!-- Facebook -->
    <string name="facebook_app_id">148751758914774</string>

    <string name="app_name">Blackout Machine</string>

    <string name="newGameText">Configurar nueva partida</string>

    <string name="premio">Premio</string>
    <string name="logo">Logo</string>
    <string name="fondo">Fondo de pantalla</string>
    <string name="maquina">Maquina tragaperras</string>
    <string name="letrasjuego">Letras juego</string>
    <string name="nuevojuego">Nueva partida</string>
    <string name="nombre">Nombre</string>


    <!-- Main activity -->
    <string name="crearjuego">Crear partida</string>
    <string name="infojuego">Detalles</string>
    <string name="eliminarjuego">Eliminar</string>

    <string name="deletequestion">¿Estás seguro de que quieres eliminar esta partida?</string>
    <string name="alertyes">Eliminar</string>
    <string name="alertno">Cancelar</string>

    <!-- Facebook Activity -->
    <string name="darlike">Dale a Me Gusta para jugar!</string>
    <string name="blackout">Blackout</string>

    <!-- Details Activity -->
    <string name="editGameText">Detalles de la partida</string>
    <string name="editarjuego">Modificar</string>
    <string name="cancelbutton">Cancelar</string>
    <string name="emailsbutton">Emails</string>

    <!-- Offline Activity -->
    <string name="escribiremail">Introduce tu email para jugar</string>
    <string name="condiciones">Al introducir tu email estás aceptando nuestros términos y condiciones</string>
    <string name="jugar">Jugar!</string>
    <string name="wrongemail">La dirección de correo no es válida</string>

    <!-- DisplayEmailsActivity -->
    <string name="displayEmailsText">Emails de esta partida</string>
</resources>
