<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp"
    tools:context="com.blackout.blackoutmachine.MainActivity" >

    <LinearLayout
        style="@style/MainGames"
        android:id="@+id/gameFrame">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:src="@drawable/logoblackout"
            android:contentDescription="@string/logo" />

    </LinearLayout>

    <TextView
        style="@style/MainGameName"
        android:id="@+id/gameName" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            style="@style/AppButton"
            android:text="@string/infojuego"
            android:visibility="invisible"
            android:id="@+id/gameDetails" />

        <Button
            style="@style/AppButton"
            android:text="@string/eliminarjuego"
            android:visibility="invisible"
            android:id="@+id/gameDelete"
            android:onClick="deleteGame" />

    </LinearLayout>
</LinearLayout>