<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.blackout.blackoutmachine.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:id="@+id/imageView"
        android:contentDescription="@string/fondo" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/playblackout"
        android:contentDescription="@string/fondo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/darlike"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logoblackout"
            android:contentDescription="@string/logo"
            android:id="@+id/playblackout"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blackout"
            android:textSize="28sp"
            android:textColor="#ffffff"
            android:textAlignment="center" />

        <com.facebook.share.widget.LikeView
            android:id="@+id/likeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</RelativeLayout>