<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.blackout.blackoutmachine.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo"
        android:id="@+id/imageView"
        android:contentDescription="@string/fondo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="0.6"
        android:padding="80dp"
        android:id="@+id/buttonLayout"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:weightSum="1"
            android:id="@+id/gameButton1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:src="@drawable/logoblackout"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/nuevojuego"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:id="@+id/game1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:weightSum="1"
            android:id="@+id/gameButton2">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:src="@drawable/logoblackout"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/nuevojuego"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:id="@+id/game2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:weightSum="1"
            android:id="@+id/gameButton3">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:src="@drawable/logoblackout"
                android:contentDescription="@string/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:gravity="center"
                android:text="@string/nuevojuego"
                android:textColor="#ffffff"
                android:textAlignment="center"
                android:id="@+id/game3" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
